tests/baselines/reference/errorWithTruncatedType.errors.txt
errorWithTruncatedType.ts(10,5): error TS2322: Type '{ propertyWithAnExceedinglyLongName1: string; propertyWithAnExceedinglyLongName2: string; propertyWithAnExceedinglyLongName3: string; propertyWithAnExceedinglyLongName4: string; propertyWithAnExceedinglyLongName5: string; }' is not assignable to type 'string'.


==== errorWithTruncatedType.ts (1 errors) ====
    var x: {
        propertyWithAnExceedinglyLongName1: string;
        propertyWithAnExceedinglyLongName2: string;
        propertyWithAnExceedinglyLongName3: string;
        propertyWithAnExceedinglyLongName4: string;
        propertyWithAnExceedinglyLongName5: string;
    };
    
    // String representation of type of 'x' should be truncated in error message
    var s: string = x;
        ~
!!! error TS2322: Type '{ propertyWithAnExceedinglyLongName1: string; propertyWithAnExceedinglyLongName2: string; propertyWithAnExceedinglyLongName3: string; propertyWithAnExceedinglyLongName4: string; propertyWithAnExceedinglyLongName5: string; }' is not assignable to type 'string'.
    